--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta name="monetag" content="4045677264b6c629c91a711b855bfaa6">
+	<meta name="monetag" content="4045677264b6c629c91a711b855bfaa6">
+    <meta charset="UTF-8" />
+    <title>Мой первый сайт</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f0f0f0;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
+    <h1>Добро пожаловать на мой сайт!</h1>
+    <p>Это простой сайт, созданный в HTML.</p>
 </body>
 </html>
