--- a/index.html
+++ b/index.html
@@ -2,24 +2,67 @@
 <html lang="ru">
 <head>
 	<meta name="monetag" content="4045677264b6c629c91a711b855bfaa6">
-    <meta charset="UTF-8" />
-    <title>Мой первый сайт</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f0f0f0;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 16px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Простой красивый сайт</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: #f0f4f8;
+      color: #333;
+    }
+    header {
+      background-color: #4A90E2;
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+    h2 {
+      text-align: center;
+      color: #4A90E2;
+      margin-bottom: 20px;
+    }
+    p {
+      line-height: 1.6;
+      font-size: 1.1em;
+    }
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin: 20px auto;
+      border-radius: 10px;
+    }
+    footer {
+      background-color: #4A90E2;
+      color: white;
+      text-align: center;
+      padding: 15px 20px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Добро пожаловать на мой сайт!</h1>
-    <p>Это простой сайт, созданный в HTML.</p>
+  <header>
+    <h1>Добро пожаловать на мой сайт</h1>
+  </header>
+  <section>
+    <h2>О себе</h2>
+    <p>Это пример простого и красивого сайта. Здесь можно разместить информацию о себе, фотографии или что угодно, что вам интересно.</p>
+    <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Пример изображения" />
+  </section>
+  <footer>
+    <p></p>
+  </footer>
 </body>
 </html>
